# ackermann-ardupilot

ackermann_sitl_models/: CMakeLists.txt  package.xml
ackermann_sitl_models/config/: sam_car.parm
ackermann_sitl_models/hooks/: sam_sitl_models.dsv.in  sam_sitl_models.sh.in
ackermann_sitl_models/models/ackermann_model/: model.config  model.sdf
ackermann_sitl_models/models/ackermann_model/meshes/: base_link.stl  camera.stl  lidar.stl  sonar_l.stl  sonar_mid_b.stl  sonar_r.stl  sonar_rb.stl  steering_left.stl  steering_right.stl  wheel_lb.stl  wheel_lf.stl  wheel_rb.stl  wheel_rf.stl
ackermann_sitl_models/worlds/: sam_playpen.sdf  sam_playpen_simple.sdf
ardupilot_gz/ardupilot_gz_bringup/config/: ackermann_bridge.yaml
ardupilot_gz/ardupilot_gz_bringup/launch/: ackermann_runway.launch.py
ardupilot_gz/ardupilot_gz_bringup/launch/robots/: ackermann_car.launch.py
ardupilot_gz/ardupilot_gz_bringup/rviz/: ackermann.rviz
ardupilot_gz/ardupilot_gz_description/models/sam_model/: model.sdf
ardupilot_gz/ardupilot_gz_gazebo/worlds/: sam_runway.sdf
testing/ackermann_bringup/: CMakeLists.txt  package.xml
testing/ackermann_bringup/config/: bridge.yaml
testing/ackermann_bringup/launch/: spawn.launch.py
testing/ackermann_bringup/rviz/: ackermann.rviz
testing/teleop_twist_keyboard/: package.xml  setup.py  teleop_twist_keyboard.py
